# halox

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  install.rst  physics_modules.rst
docs/source/_static/: custom.css
docs/source/api/: halox.bias.rst  halox.cMrelation.rst  halox.cm.rst  halox.cosmology.rst  halox.einasto.rst  halox.emus.rst  halox.hmf.rst  halox.lss.rst  halox.nfw.rst
imgs/: map.npz
notebooks/: T08_emulation.ipynb  bias.ipynb  cMrelations.ipynb  einasto.ipynb  emu_timing_tests.ipynb  gradients.ipynb  halox_vs_colossus.ipynb  hmf.ipynb  lss.ipynb  nfw.ipynb  others.ipynb  sigmaM.ipynb  sigma_emulation.ipynb  using_the_emulator.ipynb  vmap_cosmo.ipynb
paper/: paper.bib  paper.md
paper/figure_scripts/: benchmark_hmf_results.csv  plot_benchmark.py  plot_sigmaM_emulator.py
scripts/: benchmark_hmf.py  benchmark_hmf_results.csv  benchmark_hmf_results.md  plot_benchmark.py
src/halox/: __init__.py  bias.py  cm.py  cosmology.py  hmf.py  lss.py  nfw.py
src/halox/emus/: __init__.py  sigmaM.py  sigma_200k_log.npz  sigma_40k_conv5.npz  sigma_40k_conv6.npz  sigma_40k_conv7.npz  sigma_40k_conv8.npz  sigma_mp4.npz
src/halox/halo/: __init__.py  cMrelation.py  einasto.py  nfw.py  truncnfw.py
tests/: test_bias.py  test_cM.py  test_cosmology.py  test_einasto.py  test_emus.py  test_hmfs.py  test_imports.py  test_jax_friendliness.py  test_lss.py  test_nfw.py
