[project]
name = "halox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Florian Kéruzoré", email = "fkeruzore@anl.gov" }
]
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.30",
    "jax-cosmo>=0.1.0",
]

[project.scripts]
halox = "halox:main"

[project.optional-dependencies]
tests = [
    "astropy>=6.0.1",
    "colossus>=1.3.8",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=halox --cov-report=term-missing --cov-fail-under=90"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
